--- a/client/src/scss/_main-layout.scss
+++ b/client/src/scss/_main-layout.scss
@@ -1,7 +1,6 @@
 @use "./variables" as *;
 
 main {
-  height: 100%;
   &.main-container {
     margin-top: 66px;
     padding: 10px;
